--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -38,7 +38,7 @@ body {
 }
 
 header {
-    min-height: 100vh;
+    height: 100vh;
 }
 
 a, button, .menu-btn {
