--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -142,7 +142,10 @@ header {
     position: fixed;
 
     visibility: hidden;
-    top: 9.8125rem;
+        
+    // top: 9.8125rem;
+    top: 8.5rem;
+    
     right: -100%;
 
     width: 86.66%;
